--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .holder{
 	display:grid;
-	grid-template-columns: repeat(2, 200px);
-  grid-auto-rows: 200px;
+	grid-template-columns: repeat(2, 100px);
+  grid-template-rows: repeat(2, 100px);
 
 }
 /* Your CSS Code here. */
